--- a/_config.yaml
+++ b/_config.yaml
@@ -30,6 +30,10 @@ defaults:
       type: "members"
     values:
       layout: member
+  - scope:
+      type: "alumni"
+    values:
+      layout: member
   # markdown files in /_posts
   - scope:
       type: "posts"
