--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -182,27 +182,11 @@
   - Casey S. Greene
   - Anthony Gitter
   publisher: PLOS Computational Biology
-  date: '2020-12-04'
+  date: '2019-06-24'
   link: https://doi.org/c7np
   orcid: 0000-0002-4655-3773
-  plugin: sources.py
-  file: sources.yaml
-  type: paper
-  description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed
-    do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
-  buttons:
-  - type: manubot
-    link: https://greenelab.github.io/meta-review/
-  - type: source
-    text: Manuscript Source
-    link: https://github.com/greenelab/meta-review
-  - type: website
-    link: http://manubot.org/
-  tags:
-  - open science
-  - collaboration
-  repo: greenelab/meta-review
+  plugin: orcid.py
+  file: orcid.yaml
 - id: doi:10.1101/573782
   title: Sequential compression of gene expression across dimensionalities and methods
     reveals no single best method or dimensionality
@@ -218,30 +202,125 @@
   orcid: 0000-0002-4655-3773
   plugin: orcid.py
   file: orcid.yaml
-- id: doi:10.1016/j.csbj.2020.05.017
-  title: Constructing knowledge graphs and their biomedical applications
+- id: doi:10.1109/DAC18074.2021.9586121
+  title: 'DANCE: Differentiable Accelerator/Network Co-Exploration'
   authors:
-  - David N. Nicholson
-  - Casey S. Greene
-  publisher: Computational and Structural Biotechnology Journal
-  date: '2020-01-01'
-  link: https://doi.org/gg7m48
-  image: https://ars.els-cdn.com/content/image/1-s2.0-S2001037020302804-gr1.jpg
+  - Kanghyun Choi<sup>1</sup>
+  - Deokki Hong<sup>1</sup>
+  - Hojae Yoon<sup>1</sup>
+  - Joonsang Yu
+  - Youngsok Kim
+  - Jinho Lee
+  publisher: Design Automation Conference (DAC)
+  date: '2021-12-05'
+  link: https://doi.org/gtjv5c
+  type: paper
+  image: images_paper/dance.png
+  buttons:
+  - type: arxiv
+    link: https://arxiv.org/abs/2009.06237
+  - type: slide
+    link: resources_paper/dance_slides.pdf
+  tags:
+  - Top Conf.
+  - AI/ML
+  - Arch.
   plugin: sources.py
   file: sources.yaml
-- id: doi:10.7554/eLife.32822
-  title: Sci-Hub provides access to nearly all scholarly literature
+- id: arxiv:2111.02625
+  title: 'Qimera: Data-free Quantization with Synthetic Boundary Supporting Samples'
   authors:
-  - Daniel S Himmelstein
-  - Ariel Rodriguez Romero
-  - Jacob G Levernier
-  - Thomas Anthony Munro
-  - Stephen Reid McLaughlin
-  - Bastian Greshake Tzovaras
-  - Casey S Greene
-  publisher: eLife
-  date: '2018-03-01'
-  link: https://doi.org/ckcj
-  image: https://iiif.elifesciences.org/lax:32822%2Felife-32822-fig8-v3.tif/full/863,/0/default.webp
+  - Kanghyun Choi
+  - Deokki Hong
+  - Noseong Park
+  - Youngsok Kim
+  - Jinho Lee
+  publisher: Neural Information Processing Systems (NeurIPS)
+  date: '2021-11-05'
+  link: https://arxiv.org/abs/2111.02625
+  type: paper
+  image: images_paper/qimera.png
+  buttons:
+  - type: arxiv
+    link: https://arxiv.org/abs/2111.02625
+  - type: slide
+    link: resources_paper/qimera_slides.pdf
+  - type: github
+    link: https://github.com/iamkanghyunchoi/qimera
+  tags:
+  - Top Conf.
+  - AI/ML
+  plugin: sources.py
+  file: sources.yaml
+- id: arxiv:2301.09312
+  title: Enabling Hard Constraints in Differentiable Neural Network and Accelerator
+    Co-Exploration
+  authors:
+  - Deokki Hong
+  - Kanghyun Choi
+  - Hye Yoon Lee
+  - Joonsang Yu
+  - Noseong Park
+  - Youngsok Kim
+  - Jinho Lee
+  publisher: Design Automation Conference (DAC)
+  date: '2023-01-24'
+  link: https://arxiv.org/abs/2301.09312
+  type: paper
+  image: images_paper/hdx.png
+  buttons:
+  - type: arxiv
+    link: https://arxiv.org/abs/2301.09312
+  tags:
+  - Top Conf.
+  - AI/ML
+  - Arch.
+  plugin: sources.py
+  file: sources.yaml
+- id: arxiv:2203.17008
+  title: 'It''s All In the Teacher: Zero-Shot Quantization Brought Closer to the Teacher'
+  authors:
+  - Kanghyun Choi
+  - Hye Yoon Lee
+  - Deokki Hong
+  - Joonsang Yu
+  - Noseong Park
+  - Youngsok Kim
+  - Jinho Lee
+  publisher: Neural Information Processing Systems (NeurIPS)
+  date: '2022-04-04'
+  link: https://arxiv.org/abs/2203.17008
+  type: paper
+  image: images_paper/ait.png
+  buttons:
+  - type: arxiv
+    link: https://arxiv.org/abs/2203.17008
+  - type: slide
+    link: resources_paper/cvpr_ait.pdf
+  - type: github
+    link: https://github.com/iamkanghyunchoi/ait
+  tags:
+  - Top Conf.
+  - AI/ML
+  plugin: sources.py
+  file: sources.yaml
+- id: doi:10.1109/DAC56929.2023.10247930
+  title: Fast Adversarial Training with Dynamic Batch-level Attack Control
+  authors:
+  - Jaewon Jung
+  - Jaeyong Song
+  - Hongsun Jang
+  - Hyeyoon Lee
+  - Kanghyun Choi
+  - Noseong Park
+  - Jinho Lee
+  publisher: Design Automation Conference (DAC)
+  date: '2023-07-09'
+  link: https://doi.org/gtjwtc
+  type: paper
+  image: images_paper/dbac.png
+  tags:
+  - Top Conf.
+  - AI/ML
   plugin: sources.py
   file: sources.yaml
