--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,5 +1,103 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
+- title: A Case for In-Memory Random Scatter-Gather for Fast Graph Processing
+  authors:
+  - Changmin Shin<sup>1</sup>
+  - Taehee Kwon<sup>1</sup>
+  - Jaeyong Song
+  - Jae Hyung Ju
+  - Frank Liu
+  - Jinho Lee
+  date: '2024-03-10'
+  publisher: IEEE Computer Architecture Letters (CAL)
+  tags:
+  - SCI
+  - Arch.
+  plugin: sources.py
+  file: sources.yaml
+- title: 'PeerAiD: Improving Adversarial Distillation from a Specialized Peer Tutor'
+  authors:
+  - Jaewon Jung
+  - Hongsun Jang
+  - Jaeyong Song
+  - Jinho Lee
+  date: '2024-03-09'
+  publisher: Computer Vision and Pattern Recognition Conference (CVPR)
+  tags:
+  - Top Conf.
+  - AI/ML
+  plugin: sources.py
+  file: sources.yaml
+- id: https://doi.org/10.1145/3627535.3638474
+  title: 'AGAThA: Fast and Efficient GPU Acceleration of Guided Sequence Alignment
+    for Long Read Mapping'
+  authors:
+  - Seongyeon Park
+  - Junguk Hong
+  - Jaeyong Song
+  - Hajin Kim
+  - Youngsok Kim
+  - Jinho Lee
+  publisher: ACM Annual Symposium on Principles and Practice of Parallel Programming
+    (PPoPP)
+  date: '2024-02-20'
+  link: https://dl.acm.org/doi/10.1145/3627535.3638474
+  buttons:
+  - type: paper
+    link: https://dl.acm.org/doi/10.1145/3627535.3638474
+  - type: artifact
+    link: https://zenodo.org/records/10462237
+  tags:
+  - Top Conf.
+  - Bioinfo.
+  - Syst. SW
+  plugin: sources.py
+  file: sources.yaml
+- title: 'Pipette: Automatic Fine-Grained Large Language Model Training Configurator
+    for Real-World Clusters'
+  authors:
+  - Jinkyu Yim<sup>1</sup>
+  - Jaeyong Song<sup>1</sup>
+  - Yerim Choi
+  - Jaebeen Lee
+  - Hongsun Jang
+  - Jinho Lee
+  date: '2024-03-27'
+  publisher: Design, Automation and Test in Europe Conference (DATE)
+  tags:
+  - Top Conf.
+  - AI/ML
+  - Syst. SW
+  plugin: sources.py
+  file: sources.yaml
+- title: 'Smart-Infinity: Fast Large Language Model Training using Near-Storage Processing
+    on a Real System'
+  authors:
+  - Hongsun Jang
+  - Jaeyong Song
+  - Jaewon Jung
+  - Jaeyoung Park
+  - Youngsok Kim
+  - Jinho Lee
+  date: '2024-03-02'
+  publisher: Best Paper Award-Honorable Mention, International Symposium on High-Performance
+    Computer Architecture (HPCA)
+  buttons:
+  - type: arxiv
+    link: http://arxiv.org/abs/2403.06664
+  - type: github
+    link: https://github.com/AIS-SNU/smart-infinity
+  - type: video
+    link: https://www.youtube.com/watch?v=o1O3-mQCSv4&feature=youtu.be
+  - type: poster
+    link: https://github.com/AIS-SNU/smart-infinity/blob/main/assets/smart-infinity_poster_hpca24.pdf
+  tags:
+  - Top Conf.
+  - Syst. SW
+  - Arch.
+  - AI/ML
+  plugin: sources.py
+  file: sources.yaml
 - id: doi:10.1109/DAC18074.2021.9586121
   title: 'DANCE: Differentiable Accelerator/Network Co-Exploration'
   authors:
