--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -44,6 +44,7 @@
     - Jaeyong Song<sup>1</sup>
     - Yerim Choi
     - Jaebeen Lee
+    - Jaewon Jung
     - Hongsun Jang
     - Jinho Lee
   date: '2024-03-27'
