--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -102,7 +102,7 @@
   id: ''
   plugin: sources.py
   file: sources.yaml
-- id: 10.1109/TC.2023.3299030
+- id: doi:10.1109/TC.2023.3299030
   title: Enabling Fine-Grained Spatial Multitasking on Systolic-Array NPUs Using Dataflow
     Mirroring
   authors:
@@ -202,7 +202,7 @@
     link: https://zenodo.org/record/7220824
   plugin: sources.py
   file: sources.yaml
-- id: 10.1109/HPCA56546.2023.10071102
+- id: doi:10.1109/HPCA56546.2023.10071102
   title: 'SGCN: Exploiting Compressed-Sparse Features in Deep Graph Convolutional
     Network Accelerators'
   authors:
@@ -227,24 +227,25 @@
     link: https://ieeexplore.ieee.org/document/10071102/
   plugin: sources.py
   file: sources.yaml
-- id: BMVC_Imp
+- id: https://bmvc2022.mpi-inf.mpg.de/0281.pdf
   title: Improving Gradient Paths for Binary Convolutional Neural Networks
   authors:
   - Baozhou Zhu
   - Peter Hofstee
   - Jinho Lee
   - Zaid Al-Ars
+  publisher: BMVC
+  date: '2022-11-21'
+  link: https://bmvc2022.mpi-inf.mpg.de/0281.pdf
   tags:
   - Top Conf.
   - AI/ML
   buttons:
   - type: paper
     link: https://bmvc2022.mpi-inf.mpg.de/0281.pdf
-  date: '2022-11-21'
-  publisher: BMVC
   plugin: sources.py
   file: sources.yaml
-- id: 10.1145/3559009.3569693
+- id: doi:10.1145/3559009.3569693
   title: 'Slice-and-Forge: Making Better Use of Caches for Graph Convolutional Network
     Accelerators'
   authors:
@@ -269,7 +270,7 @@
     link: https://dl.acm.org/doi/10.1145/3559009.3569693
   plugin: sources.py
   file: sources.yaml
-- id: https://doi.org/10.1145/3559009.3569686
+- id: doi:https://doi.org/10.1145/3559009.3569686
   title: Decoupling Schedule, Topology Layout, and Algorithm to Easily Enlarge the
     Tuning Space of GPU Graph Processing
   authors:
@@ -284,7 +285,7 @@
   publisher: Proceedings of the International Conference on Parallel Architectures
     and Compilation Techniques
   date: '2023-01-27'
-  link: https://doi.org/10.1145/3559009.3569686
+  link: https://doi.org/gtm37d
   tags:
   - Top Conf.
   - Syst. SW
@@ -293,7 +294,7 @@
     link: https://dl.acm.org/doi/10.1145/3559009.3569686
   plugin: sources.py
   file: sources.yaml
-- id: https://doi.org/10.1145/3470496.3527384
+- id: doi:https://doi.org/10.1145/3470496.3527384
   title: 'GCoM: a detailed GPU core model for accurate analytical modeling of modern
     GPUs'
   authors:
@@ -306,7 +307,7 @@
   - Youngsok Kim
   publisher: Proceedings of the 49th Annual International Symposium on Computer Architecture
   date: '2022-06-11'
-  link: https://doi.org/10.1145/3470496.3527384
+  link: https://doi.org/grg25v
   tags:
   - Top Conf.
   - Arch.
@@ -315,7 +316,7 @@
     link: https://dl.acm.org/doi/10.1145/3470496.3527384
   plugin: sources.py
   file: sources.yaml
-- id: https://doi.org/10.1145/3528535.3531513
+- id: doi:https://doi.org/10.1145/3528535.3531513
   title: 'GuardiaNN: Fast and Secure On-Device Inference in TrustZone Using Embedded
     SRAM and Cryptographic Hardware'
   authors:
@@ -328,7 +329,7 @@
   - Youngsok Kim
   publisher: Proceedings of the 23rd ACM/IFIP International Middleware Conference
   date: '2022-10-24'
-  link: https://doi.org/10.1145/3528535.3531513
+  link: https://doi.org/gtm37g
   tags:
   - Top Conf.
   - Syst. SW
@@ -338,7 +339,7 @@
     link: https://dl.acm.org/doi/10.1145/3528535.3531513
   plugin: sources.py
   file: sources.yaml
-- id: 10.1109/IPDPS53621.2022.00076
+- id: doi:10.1109/IPDPS53621.2022.00076
   title: 'SALoBa: Maximizing Data Locality and Workload Balance for Fast Sequence
     Alignment on GPUs'
   authors:
@@ -365,7 +366,7 @@
     link: https://arxiv.org/abs/2301.09310
   plugin: sources.py
   file: sources.yaml
-- id: 10.1109/TC.2021.3092205
+- id: doi:10.1109/TC.2021.3092205
   title: 'ComPreEND: Computation Pruning through Predictive Early Negative Detection
     for ReLU in a Deep Neural Network Accelerator'
   authors:
@@ -387,7 +388,7 @@
     link: https://ieeexplore.ieee.org/document/9470992
   plugin: sources.py
   file: sources.yaml
-- id: 10.1109/LCA.2021.3090954
+- id: doi:10.1109/LCA.2021.3090954
   title: Making a Better Use of Caches for GCN Accelerators with Feature Slicing and
     Automatic Tile Morphing
   authors:
@@ -431,7 +432,7 @@
     link: https://www.ijcai.org/proceedings/2021/0478.pdf
   plugin: sources.py
   file: sources.yaml
-- id: 10.1109/DAC18074.2021.9586312
+- id: doi:10.1109/DAC18074.2021.9586312
   title: 'Dataflow Mirroring: Architectural Support for Highly Efficient Fine-Grained
     Spatial Multitasking on Systolic-Array NPUs'
   authors:
@@ -503,7 +504,7 @@
     link: https://aisys.snu.ac.kr/papers/deep_composer_poster_1005.pdf
   plugin: sources.py
   file: sources.yaml
-- id: 10.1109/DAC18072.2020.9218538
+- id: doi:10.1109/DAC18072.2020.9218538
   title: 'FlexReduce: Flexible All-reduce for Distributed Deep Learning on Asymmetric
     Network Topology'
   authors:
@@ -525,7 +526,7 @@
     link: https://ieeexplore.ieee.org/abstract/document/9218538
   plugin: sources.py
   file: sources.yaml
-- id: 10.1109/CVPRW50498.2020.00385
+- id: doi:10.1109/CVPRW50498.2020.00385
   title: 'MUTE: Inter-class Ambiguity Driven Multi-hot Target Encoding for Deep Neural
     Network Design'
   authors:
@@ -541,7 +542,7 @@
   - AI/ML
   plugin: sources.py
   file: sources.yaml
-- id: https://doi.org/10.1007/s11265-020-01547-w
+- id: doi:https://doi.org/10.1007/s11265-020-01547-w
   title: An Efficient High-Throughput LZ77-Based Decompressor in Reconfigurable Logic
   authors:
   - Jian Fang
@@ -551,7 +552,7 @@
   - H. Peter Hofstee
   publisher: Journal of Signal Processing Systems
   date: '2020-09-01'
-  link: https://doi.org/10.1007/s11265-020-01547-w
+  link: https://doi.org/gtm379
   tags:
   - SCI
   - Arch.
@@ -560,7 +561,7 @@
     link: https://link.springer.com/content/pdf/10.1007/s11265-020-01547-w.pdf
   plugin: sources.py
   file: sources.yaml
-- id: https://doi.org/10.1007/s00778-019-00581-w
+- id: doi:https://doi.org/10.1007/s00778-019-00581-w
   title: 'In-memory database acceleration on FPGAs: a survey'
   authors:
   - Jian Fang
@@ -570,7 +571,7 @@
   - H. Peter Hofstee
   publisher: The VLDB Journal
   date: '2020-01-01'
-  link: https://doi.org/10.1007/s00778-019-00581-w
+  link: https://doi.org/gtm38t
   tags:
   - SCI
   - Arch.
@@ -952,7 +953,7 @@
   link: https://doi.org/cbrdjg
   plugin: sources.py
   file: sources.yaml
-- id: 10.1109/DAC18074.2021.9586121
+- id: doi:10.1109/DAC18074.2021.9586121
   title: 'DANCE: Differentiable Accelerator/Network Co-Exploration'
   authors:
   - Kanghyun Choi<sup>1</sup>
@@ -1054,7 +1055,7 @@
   - AI/ML
   plugin: sources.py
   file: sources.yaml
-- id: 10.1109/DAC56929.2023.10247930
+- id: doi:10.1109/DAC56929.2023.10247930
   title: Fast Adversarial Training with Dynamic Batch-level Attack Control
   authors:
   - Jaewon Jung
