--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -26,7 +26,7 @@
     - AI/ML
   id: ""
 
-- id: 10.1145/3627535.3638474
+- id: https://doi.org/10.1145/3627535.3638474
   publisher: ACM Annual Symposium on Principles and Practice of Parallel Programming (PPoPP)
   buttons:
   - type: paper
@@ -80,7 +80,7 @@
     - AI/ML
   id: ""
 
-- id: 10.1109/TC.2023.3299030
+- id: doi:10.1109/TC.2023.3299030
   tags:
     - SCI
     - Arch. 
@@ -89,7 +89,7 @@
     - type: paper
       link: https://ieeexplore.ieee.org/abstract/document/10198513
 
-- id: 10.1145/3589258
+- id: https://doi.org/10.1145/3589258
   tags:
     - Top Conf.
     - AI/ML
@@ -98,7 +98,7 @@
     - type: paper
       link: https://dl.acm.org/doi/abs/10.1145/3589258
 
-- id: 10.23919/DATE56975.2023.10137044
+- id: https://doi.org/10.23919/DATE56975.2023.10137044
   tags:
     - Top Conf.
     - AI/ML
@@ -132,7 +132,7 @@
     - type: artifact
       link: https://zenodo.org/record/7220824
 
-- id: 10.1109/HPCA56546.2023.10071102
+- id: doi:10.1109/HPCA56546.2023.10071102
   authors:
     - Mingi Yoo<sup>1</sup>
     - Jaeyong Song<sup>1</sup>
@@ -150,7 +150,7 @@
     - type: paper
       link: https://ieeexplore.ieee.org/document/10071102/
 
-- id: BMVC_Imp
+- id: https://bmvc2022.mpi-inf.mpg.de/0281.pdf
   title: Improving Gradient Paths for Binary Convolutional Neural Networks
   authors:
     - Baozhou Zhu
@@ -166,7 +166,7 @@
   date: '2022-11-21'
   publisher: BMVC
 
-- id: 10.1145/3559009.3569693
+- id: doi:10.1145/3559009.3569693
   title: "Slice-and-Forge: Making Better Use of Caches for Graph Convolutional Network Accelerators"
   authors: 
     - Mingi Yoo<sup>1</sup>
@@ -187,7 +187,7 @@
     - type: paper
       link: https://dl.acm.org/doi/10.1145/3559009.3569693
 
-- id: 10.1145/3559009.3569686
+- id: doi:https://doi.org/10.1145/3559009.3569686
   tags:
     - Top Conf.
     - Syst. SW
@@ -195,7 +195,7 @@
     - type: paper
       link: https://dl.acm.org/doi/10.1145/3559009.3569686
 
-- id: 10.1145/3470496.3527384
+- id: doi:https://doi.org/10.1145/3470496.3527384
   tags:
     - Top Conf.
     - Arch.
@@ -203,7 +203,7 @@
     - type: paper
       link: https://dl.acm.org/doi/10.1145/3470496.3527384
 
-- id: 10.1145/3528535.3531513
+- id: doi:https://doi.org/10.1145/3528535.3531513
   tags:
     - Top Conf.
     - Syst. SW
@@ -212,7 +212,7 @@
     - type: paper
       link: https://dl.acm.org/doi/10.1145/3528535.3531513
 
-- id: 10.1109/IPDPS53621.2022.00076
+- id: doi:10.1109/IPDPS53621.2022.00076
   tags: 
     - Top Conf.
     - Syst. SW
@@ -223,7 +223,7 @@
     - type: arxiv
       link: https://arxiv.org/abs/2301.09310
 
-- id: 10.1109/TC.2021.3092205
+- id: doi:10.1109/TC.2021.3092205
   tags: 
     - SCI
     - Arch.
@@ -232,7 +232,7 @@
     - type: paper
       link: https://ieeexplore.ieee.org/document/9470992
 
-- id: 10.1109/LCA.2021.3090954
+- id: doi:10.1109/LCA.2021.3090954
   authors: 
     - Mingi Yoo<sup>1</sup>
     - Jaeyong Song<sup>1</sup>
@@ -267,7 +267,7 @@
   date: '2021-08-19'
   publisher: IJCAI
 
-- id: 10.1109/DAC18074.2021.9586312
+- id: doi:10.1109/DAC18074.2021.9586312
   tags: 
     - Top Conf.
     - Arch. 
@@ -309,7 +309,7 @@
     - type: poster
       link: https://aisys.snu.ac.kr/papers/deep_composer_poster_1005.pdf
 
-- id: 10.1109/DAC18072.2020.9218538
+- id: doi:10.1109/DAC18072.2020.9218538
   tags: 
     - Top Conf.
     - AI/ML
@@ -320,11 +320,11 @@
     - type: paper
       link: https://ieeexplore.ieee.org/abstract/document/9218538
 
-- id: 10.1109/CVPRW50498.2020.00385
+- id: doi:10.1109/CVPRW50498.2020.00385
   tags: 
     - AI/ML
 
-- id: 10.1007/s11265-020-01547-w
+- id: doi:https://doi.org/10.1007/s11265-020-01547-w
   tags:
     - SCI
     - Arch.
@@ -333,7 +333,7 @@
       link: https://link.springer.com/content/pdf/10.1007/s11265-020-01547-w.pdf
 
 
-- id: 10.1007/s00778-019-00581-w
+- id: doi:https://doi.org/10.1007/s00778-019-00581-w
   tags: 
     - SCI
     - Arch.
@@ -417,7 +417,7 @@
 
 
 
-- id: 10.1109/DAC18074.2021.9586121
+- id: doi:10.1109/DAC18074.2021.9586121
   type: paper
   image: images_paper/dance.png
   authors:
@@ -480,7 +480,7 @@
     - Top Conf. 
     - AI/ML 
 
-- id: 10.1109/DAC56929.2023.10247930
+- id: doi:10.1109/DAC56929.2023.10247930
   type: paper
   image: images_paper/dbac.png
   publisher: Design Automation Conference (DAC)
