--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -26,7 +26,7 @@
     - AI/ML
   id: ""
 
-- id: https://doi.org/10.1145/3627535.3638474
+- id: 10.1145/3627535.3638474
   publisher: ACM Annual Symposium on Principles and Practice of Parallel Programming (PPoPP)
   buttons:
   - type: paper
@@ -89,7 +89,7 @@
     - type: paper
       link: https://ieeexplore.ieee.org/abstract/document/10198513
 
-- id: https://doi.org/10.1145/3589258
+- id: 10.1145/3589258
   tags:
     - Top Conf.
     - AI/ML
@@ -98,7 +98,7 @@
     - type: paper
       link: https://dl.acm.org/doi/abs/10.1145/3589258
 
-- id: https://doi.org/10.23919/DATE56975.2023.10137044
+- id: 10.23919/DATE56975.2023.10137044
   tags:
     - Top Conf.
     - AI/ML
@@ -187,7 +187,7 @@
     - type: paper
       link: https://dl.acm.org/doi/10.1145/3559009.3569693
 
-- id: doi:https://doi.org/10.1145/3559009.3569686
+- id: 10.1145/3559009.3569686
   tags:
     - Top Conf.
     - Syst. SW
@@ -195,7 +195,7 @@
     - type: paper
       link: https://dl.acm.org/doi/10.1145/3559009.3569686
 
-- id: doi:https://doi.org/10.1145/3470496.3527384
+- id: 10.1145/3470496.3527384
   tags:
     - Top Conf.
     - Arch.
@@ -203,7 +203,7 @@
     - type: paper
       link: https://dl.acm.org/doi/10.1145/3470496.3527384
 
-- id: doi:https://doi.org/10.1145/3528535.3531513
+- id: 10.1145/3528535.3531513
   tags:
     - Top Conf.
     - Syst. SW
@@ -324,7 +324,7 @@
   tags: 
     - AI/ML
 
-- id: doi:https://doi.org/10.1007/s11265-020-01547-w
+- id: 10.1007/s11265-020-01547-w
   tags:
     - SCI
     - Arch.
@@ -333,7 +333,7 @@
       link: https://link.springer.com/content/pdf/10.1007/s11265-020-01547-w.pdf
 
 
-- id: doi:https://doi.org/10.1007/s00778-019-00581-w
+- id: 10.1007/s00778-019-00581-w
   tags: 
     - SCI
     - Arch.
